package com.epam.training.webshop.service;

public interface Observable {

    void subscribe(Observer observer);
}
