@startuml
'https://plantuml.com/class-diagram

interface Command
class AddProductCommand
Command <|.. AddProductCommand
class ExitCommand
Command <|.. ExitCommand
class OrderCommand
Command <|.. OrderCommand

package Presentation <<Rectangle>> {
interface CommandLineParser
abstract AbstractCommandLineParser
CommandLineParser <|.. AbstractCommandLineParser

class AddProductCommandLineParser
AbstractCommandLineParser <|-- AddProductCommandLineParser
class ExitCommandLineParser
AbstractCommandLineParser <|-- ExitCommandLineParser
class OrderCommandLineParser
AbstractCommandLineParser <|-- OrderCommandLineParser

class CliInterpreter
}

CliInterpreter --> Command : Executes
CliInterpreter --> CommandLineParser : Uses to parse input
CommandLineParser --> Command : Creates
ExitCommand --> CommandLineParser : Stops

package Domain/Service <<Rectangle>> {
    interface Cart
    class CartImpl
    Cart <|.. CartImpl
    interface Product
    class SimpleProductImpl
    Product <|.. SimpleProductImpl
    CartImpl o-- Product
    interface Observer
    interface Observable
    Observable --> Observer : Notifies
    Observable <|.. Cart
    interface OrderConfirmationService
    Observer <|.. OrderConfirmationService
    class DummyOrderConfirmationService
    OrderConfirmationService <|.. DummyOrderConfirmationService
    interface GrossPriceCalculator
    CartImpl *.. GrossPriceCalculator : Uses for calculating gross price
    class GrossPriceCalculatorDecorator
    GrossPriceCalculator <|.. GrossPriceCalculatorDecorator
    class GrossPriceCalculatorImpl
    GrossPriceCalculator <|.. GrossPriceCalculatorImpl
    class HungarianTaxGrossPriceCalculator
    GrossPriceCalculatorDecorator <|-- HungarianTaxGrossPriceCalculator
    HungarianTaxGrossPriceCalculator --> GrossPriceCalculator : Decorates
}

OrderCommand --> Cart : Places order
AddProductCommand --> Cart : Add product

package DataAccess <<Rectangle>> {
    interface OrderRepository
    class DummyOrderRepository
    OrderRepository <|.. DummyOrderRepository
    interface ProductRepository
    class DummyProductRepository
    ProductRepository <|.. DummyProductRepository
}

CartImpl --> OrderRepository : Saves into
AddProductCommand --> ProductRepository : Loads from

@enduml
